// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BigramBlockSmall test BigramBlockSmall position 0 snapshot 1`] = `
<div
  className="mr-4"
>
  <div
    className="d-flex"
  >
    <div
      className="bigramBlock blockBottomBorder  blockRightBorder "
    />
    <div
      className="bigramBlock blockBottomBorder conception"
    />
  </div>
  <div
    className="d-flex"
  >
    <div
      className="bigramBlock blockRightBorder "
    />
    <div
      className="bigramBlock "
    />
  </div>
  <div
    className="lineText"
  >
    test line Text
  </div>
</div>
`;

exports[`BigramBlockSmall test BigramBlockSmall position 1 snapshot 1`] = `
<div
  className="mr-4"
>
  <div
    className="d-flex"
  >
    <div
      className="bigramBlock blockBottomBorder  blockRightBorder growth"
    />
    <div
      className="bigramBlock blockBottomBorder "
    />
  </div>
  <div
    className="d-flex"
  >
    <div
      className="bigramBlock blockRightBorder "
    />
    <div
      className="bigramBlock "
    />
  </div>
  <div
    className="lineText"
  >
    test line Text
  </div>
</div>
`;

exports[`BigramBlockSmall test BigramBlockSmall position 2 snapshot 1`] = `
<div
  className="mr-4"
>
  <div
    className="d-flex"
  >
    <div
      className="bigramBlock blockBottomBorder  blockRightBorder "
    />
    <div
      className="bigramBlock blockBottomBorder "
    />
  </div>
  <div
    className="d-flex"
  >
    <div
      className="bigramBlock blockRightBorder maturation"
    />
    <div
      className="bigramBlock "
    />
  </div>
  <div
    className="lineText"
  >
    test line Text
  </div>
</div>
`;

exports[`BigramBlockSmall test BigramBlockSmall position 3 snapshot 1`] = `
<div
  className="mr-4"
>
  <div
    className="d-flex"
  >
    <div
      className="bigramBlock blockBottomBorder  blockRightBorder "
    />
    <div
      className="bigramBlock blockBottomBorder "
    />
  </div>
  <div
    className="d-flex"
  >
    <div
      className="bigramBlock blockRightBorder "
    />
    <div
      className="bigramBlock seeding"
    />
  </div>
  <div
    className="lineText"
  >
    test line Text
  </div>
</div>
`;
